# fpl-md

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/fpl_md/: api.py  db.py  db_utils.py  fplmd.py  utils.py
src/fpl_md/migrations/: create_player_news_table.py  create_subscriptions_table.py
