[tool.poetry]
name = "fpl-md"
version = "0.1.0"
description = ""
authors = ["Sara Tan <saratan@mac.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
aiohttp = "^3.7.3"
redis = "^3.5.3"
fpl = "^0.6.25"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fplmd = "src.fpl_md.fplmd:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
